<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AliceBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="40dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/init_log"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/login_padding_ll"
        android:background="@drawable/login_ll_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_name"
            android:scaleType="center"
            style="@style/login_padding_image" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line_vertical"
            android:scaleType="fitCenter" />

        <EditText
            android:id="@+id/ev_login_no"
            android:layout_marginLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_et_bg"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/login_padding_ll"
        android:background="@drawable/login_ll_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_pw"
            android:scaleType="fitCenter"
            style="@style/login_padding_image" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line_vertical" />

        <EditText
            android:id="@+id/ev_login_pw"
            android:layout_marginLeft="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_et_bg"
            android:hint="@string/login_password_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/login_padding_pw">

        <TextView
            android:id="@+id/tv_forget_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/forget_pw"
            android:textColorHint="@color/Gainsboro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">
            <com.gc.materialdesign.views.CheckBox
                android:id="@+id/cb_rember_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#1E88E5"
                app:check = "true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remeber_pw"
                android:gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:textSize="16sp"
                android:textColorHint="@color/Gainsboro"/>
            </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/login_padding_pw">

        <com.lac.xab.ui.progressbtn.CircularProgressButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Azure"
            android:text="@string/login"
            android:textColor = "@color/DimGray"
            android:textSize="20sp"
            app:cpb_textError="@string/login_error"
            app:cpb_textIdle="@string/login"
            app:cpb_selectorIdle="@drawable/idle_state_selector"
            app:cpb_selectorComplete="@drawable/complete_state_selector"
            app:cpb_selectorError="@drawable/error_state_selector"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@android:color/transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp">
            <com.lac.xab.ui.NumberProgressBar
                android:id="@+id/npb_login"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@android:color/transparent"
                app:progress="0"/>
            <TextView
                android:id="@+id/tv_login_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:gravity="center"
                android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </RelativeLayout>
</LinearLayout>
