<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gc.materialdesign.views.Card
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_notice_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/GhostWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_notice"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="12sp"
                android:textColor="@color/White"
                android:background="@color/SandyBrown"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_main_task_notice_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/leftmenu_leave"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="10sp"
                android:textColor="@color/Black" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_notice_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_notice_item_title"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_main_task_notice_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"/>
            <TextView
                android:id="@+id/tv_main_task_notice_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/DimGray"
                android:singleLine="true"/>
            </LinearLayout>
    </com.gc.materialdesign.views.Card>
</LinearLayout>